# gt_framework_talk

cartesian_gt4py/: .gitignore  laplap.ipynb  laplap.py  laplap.sdfg  setup.sh
cartesian_gt4py/.ipynb_checkpoints/: laplap-checkpoint.ipynb
cpp/: .gitignore  CMakeLists.txt  gridtools_laplap.cu  naive_laplap.cc  naive_laplap.hpp  naive_laplap2.hpp  naive_laplap3.hpp
declarative_gt4py/: laplap.py  setup.sh
